--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web-Browser-Project-Hangman</title>
+    <link rel = "stylesheet" href = "style.css"> 
 </head>
 <body>
-    
-</body>
+  <h1> Hangman</h1>
+  <p> See if you can the guess the missing word! Please enter a letter</p>
+
+ <script src = "script.js"></script>
 </html>
