builing html and css files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel = "stylesheet" href = "style.css"> 
 </head>
 <body>
-  <h1> Hangman</h1>
-  <p> See if you can the guess the missing word! Please enter a letter</p>
+  <div class="container"> 
+    <h1>Hangman</h1>
+    <div id="options-container"></div>
+    <div id = "letter-container" cless= "letter-container-hide"></div>
+    <div id = "player-input-section"></div><p>See if you can guess the missing word! Please enter a letter</p>
+    
+    <div id = "new-game-container" class="new-game-popup-hide">
+  
+    <button id = "new-game-button"> New Game</button>
+    </div> 
+
+  </div>
+
 
  <script src = "script.js"></script>
 </html>
