--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
   <div class="container"> 
     <h1>Hangman</h1>
-    <div id="options-container"></div>
-    <div id = "letter-container" cless= "letter-container-hide"></div>
-    <div id = "player-input-section"></div><p>See if you can guess the missing word! Please enter a letter</p>
-    
-    <div id = "new-game-container" class="new-game-popup-hide">
+    <div class = "text-center"><h1>HangMan</h1></div>
+    <div class = "foat-right">Wrong Letter <span id = 'wrongChoice'>0 </span> of <span id = 'mistake'></span></div>
+    <div class = "player-input-sec"></div><p>See if you can guess the right Athlete! Please enter a letter</p>
   
     <button id = "new-game-button"> New Game</button>
     </div> 
