changes to css and index files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class = "letter-div"></div>
      <h2>Try to Guess the Athlete --- Choose A Letter</h2>
   
-    <div class = "letter-input-sec"></div>
+    <div class = "word-div"></div>
        <h3>Number of lives left: <span class= "lives">6</span></h3>
      <div class="hint-div">
      <button class="ath-hint-btn">Hint</button>
