--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <h1>HANGMAN</h1>
   <div class="container"> 
     <h1>HANGMAN</h1>
+    <div class = "hangman-drawing" id = "hangmanDrawing"></div>
 
     <div class = "word-display"  id = "wordDisplay"></div>
     <div class = "guesses-left">Number of lives left:<span id= "guessesLeft"></span></div>
     <div class = "letters">
      <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
     <div id = "letterButtons"></div>
+    
    </div>
 
     <!---- <div id="hint-div">
@@ -23,7 +25,7 @@
      </div>-->
     </div>
    <button onclick ="resetGame()">New Game</button>
-     <!--<div id="hidden-notification">
+    <!---- --<div id="hidden-notification">
       <h2>YOU LOSE! GAME OVER!!</h2>
       <h2 id="win-text"> YOU WIN!</h2>
       <h3>Correct Athlete: <span class="notification-span"></span></h3>
