polishing up on css, html, js

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link rel = "stylesheet" href = "style.css"> 
 </head>
 <body>
-  <h1>HANGMAN</h1>
+  <h1>PRO-SPORTS-HANGMAN</h1>
   <div class="container"> 
-    <h1>HANGMAN</h1>
-    <div class = "hangman-drawing" id = "hangmanDrawing"></div>
-
+    <h1>ATHLETES</h1>
     <div class = "word-display"  id = "wordDisplay"></div>
-    <div class = "guesses-left">Number of lives left:<span id= "guessesLeft"></span></div>
+    <div class = "guesses-left"><h4>Number of lives left:<span id= "guessesLeft" ></span></h4></div>
     <div class = "letters">
      <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
     <div id = "letterButtons"></div>
