--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Head -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Browser-Project-Hangman</title>
-    <link rel = "stylesheet" href = "style.css"> 
+    <link rel = "stylesheet" href = "style.css"> <!--  css styles-->
 </head>
+<!--  Body  -->
 <body>
-  <h1>PRO-SPORTS-HANGMAN</h1>
+  <h1>PRO-SPORTS-HANGMAN GAME</h1>
+<!-- Container class  div within body-->
   <div class="container"> 
     <h1>ATHLETES</h1>
+<!--div  with  a class word-display  and id wordDisplay-->
     <div class = "word-display"  id = "wordDisplay"></div>
     <div class = "guesses-left"><h4>Number of lives left:<span id= "guessesLeft" ></span></h4></div>
-    <div class = "letters">
+    <div class = "letters"> <!-- div class for choosing letters-->
      <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
-    <div id = "letterButtons"></div>
+    <div id = "letterButtons"></div> <!-- div id for letteButtons -->
     
    </div>
 
 
     </div>
+ <!--for New Game button -->   
    <button onclick ="resetGame()">New Game</button>
     
   </div>
-   
+ <!--scripts -->  
    <script src = "script.js"></script>
 </body>
 </html>
