repolishing and refactoring functions to arrow functions

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <!--  Body  -->
 <body>
   <h1>PRO-SPORTS-HANGMAN GAME</h1>
+
 <!-- Container class  div within body-->
+
   <div class="container"> 
     <h1>ATHLETES</h1>
 <!--div  with  a class word-display  and id wordDisplay-->
     <div class = "word-display"  id = "wordDisplay"></div>
-    <div class = "guesses-left"><h4>Number of lives left:<span id= "guessesLeft" ></span></h4></div>
-    <div class = "letters"> <!-- div class for choosing letters-->
-     <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
-    <div id = "letterButtons"></div> <!-- div id for letteButtons -->
-    
-   </div>
-
-
+     <div class = "guesses-left"><h4>Number of lives left:<span id= "guessesLeft" ></span></h4></div>
+       <div class = "letters"> <!-- div class for choosing letters-->
+        <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
+       <div id = "letterButtons"></div> <!-- div id for letterButtons -->
+     </div>
     </div>
  <!--for New Game button -->   
    <button onclick ="resetGame()">New Game</button>
