--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <!--  Body  -->
 <body>
+  <audio id=""bgMusic" auotoplay loop>
+    <source="https://music.youtube.com/watch?v=DfJldZB4mpk&si=dT0STFjQOzUBsGVQ.mp3 "
+     type="audio/mpeg" > 
+     Your browser does not support the audio element.
+  </audio>
+
   <h1>PRO-SPORTS-HANGMAN GAME</h1>
 
 <!-- Container class  div within body-->
 
   <div class="container"> 
+
     <h1>ATHLETES</h1>
 <!--div  with  a class word-display  and id wordDisplay-->
-    <div class = "word-display"  id = "wordDisplay"></div>
+    <div class = "name-display"  id = "nameDisplay"></div>
      <div class = "guesses-left"><h4>Number of lives left:<span id= "guessesLeft" ></span></h4></div>
        <div class = "letters"> <!-- div class for choosing letters-->
         <h2>Try to Guess the Athlete --- Choose A Letter:</h2>
