--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-Browser-Project-Hangman</title>
+    <title>Web-Browser-Project-Hangman(Pro-Sports)</title>
     <link rel = "stylesheet" href = "style.css"> <!--  css styles-->
 </head>
 <!--  Body  -->
 <body>
-  <audio id=""bgMusic" auotoplay loop>
-    <source="https://music.youtube.com/watch?v=DfJldZB4mpk&si=dT0STFjQOzUBsGVQ.mp3 "
-     type="audio/mpeg" > 
-     Your browser does not support the audio element.
-  </audio>
-
-  <h1>PRO-SPORTS-HANGMAN GAME</h1>
+   <h1>PRO-SPORTS-HANGMAN GAME</h1>
 
 <!-- Container class  div within body-->
 
   <div class="container"> 
-
     <h1>ATHLETES</h1>
 <!--div  with  a class word-display  and id wordDisplay-->
     <div class = "name-display"  id = "nameDisplay"></div>
