added more names to array, made changes to js and css files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <!--  Body  -->
 <body>
+  <audio id="bgMusic" src="https://www.youtube.com/watch?v=mzkU-UHeDOA&list=PPSV.mp3" loop></audio>
+
+ 
    <h1>PRO-SPORTS-HANGMAN GAME</h1>
 
 <!-- Container class  div within body-->
