made resopnsive, added to css file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      </div>
     </div>
  <!--for New Game button -->   
-   <button onclick ="resetGame()">New Game</button>
+   <button onclick ="resetGame()">reset </button>
     
   </div>
  <!--scripts -->  
